--- a/lab-05-starter.Rmd
+++ b/lab-05-starter.Rmd
@@ -22,7 +22,7 @@ library(janitor)
 ```{r}
 skim(earthquakes)
 ```
-
+-.5 no ans
 
 ### Exercise 2
 
@@ -48,7 +48,7 @@ glimpse(earthquakes_3)
 ```
 
 This code imports the earthquakes -3 xlsx file with the appropriate data types
-
+-.5 no ans
 ### Exercise 4
 
 ```{r joining-earthquakes}
